# curlthis

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  install.ps1  install.sh  pyproject.toml  sample_request.txt  uninstall.ps1  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
curlthis/: __init__.py  __main__.py  formatter.py  main.py  parser.py  utils.py
mem_docs/: Terminal Styling and Installation Standards.md  activeContext.md  developmentGuidelines.md  productContext.md  progress.md  rich_styling_guide.md  systemPatterns.md  techContext.md
styling_standards/: adr_001_typer_styling_standard.md  documentation_styling_guidelines.md  requirements.txt  terminal_styling_README.md  terminal_styling_standards.md  terminal_styling_standards_update.md  typer_styling_guide.md
styling_standards/pokemon_terminal_styling/: README.md  __init__.py  example.py  pyproject.toml  test_pokemon_styling.py
styling_standards/pokemon_terminal_styling/pokemon_terminal_styling/: terminal_styling.py
styling_standards/python_terminal_styling/: LICENSE  README.md  __init__.py  example.py  pyproject.toml  test_pokemon_styling.py  typer_template.py
styling_standards/python_terminal_styling/pokemon_terminal_styling/: __init__.py  pokemon_selector.py
styling_standards/shell_styling_template/: README.md  example.ps1  example.sh  install_template.ps1  install_template.sh  package.json
styling_standards/terminal_styling_template/: README.md  __init__.py  example.py  requirements.txt
tests/: conftest.py  test_formatter.py  test_integration.py  test_parser.py
