[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curlthis"
version = "0.1.0"
description = "Transform raw HTTP requests into curl one-liners"
readme = "README.md"
authors = [
    { name = "David Diaz", email = "23536173+alfdav@users.noreply.github.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "rich>=13.9.4",
    "typer>=0.15.1",
    "pyperclip>=1.8.2",
]

[project.scripts]
curlthis = "curlthis.main:main"

[tool.setuptools]
packages = ["curlthis"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
