[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon_terminal_styling"
version = "0.1.0"
description = "Pokemon-themed terminal styling utilities"
authors = [{name = "David Diaz", email = "alfdav@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.9.4",
    "typer>=0.15.1",
    "pypokedex>=1.6.0",
]

[project.urls]
"Homepage" = "https://github.com/alfdav/pokemon_terminal_styling"
"Bug Tracker" = "https://github.com/alfdav/pokemon_terminal_styling/issues"